# WeatherLamp

./: .gitignore  LICENSE  PikkujouluVekotin.ino  README.md  platformio.ini  settings-example.h
WeatherLamp/: WeatherLamp.cpp  WeatherLamp.ino  settings-example.h
fmi_radar/: colorize_radar.py  download_radar.py  requirements.txt
pikkujoulu_ui/: README.md  __init__.py  pikkujoulu_ui.py  pikkujoulu_ui_config_example.py  requirements.txt
pikkujoulu_ui/static/: main.js  style.css
pikkujoulu_ui/templates/: index.html  layout.html
py/: fmi2fastledpalette.py  requirements.txt  yr2fastledpalette.py
server/: common.yml  docker-compose.example.yml  docker-compose.override-example.yml  pyproject.toml
server/endpoint/: Dockerfile  app.py  app_v2.py  create_video_frames.py  requirements-dev.txt  requirements-prod.txt  requirements.in  requirements.txt  yranalyzer.py  yrapiclient.py
server/endpoint/colormaps/: plain.json  plywood.json
server/endpoint/web/: index.html
starlette_server/: README.md  common.yml  docker-compose.example.yml  docker-compose.override-example.yml  pyproject.toml
starlette_server/endpoint/: Dockerfile  README.md  app.py  app_v2.py  create_video_frames.py  requirements.txt  yranalyzer.py  yrapiclient.py  yrdebug.py
starlette_server/endpoint/colormaps/: blue_theme.json  bright.json  elvi.json
starlette_server/endpoint/web/: index.html
