[project]
name = "weatherlamp-server"
version = "0.2.0"
description = "Server component for WeatherLamp project"
authors = [
    {name = "Aapo Rista", email = "aapris@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "astral~=3.2",
    "httpx~=0.28.1",
    "pandas~=2.2.3",
    "python-dotenv~=1.1.0",
    "shapely~=2.0.1",
    "starlette~=0.46.1",
    "uvicorn~=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "ruff>=0.11.4",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 119
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["yranalyzer", "yrapiclient"] 